core/roboconf-core/src/test/resources/configurations/valid/facet-as-child.graph
Tomcat {
	installer: puppet;
	exports: ip, portAJP = 8009;
	children: WebApp;
}

facet WebApp {
	exports: url;
}

App {
	facets: WebApp;
}
