core/roboconf-core/src/test/resources/configurations/invalid/unresolvable-facet.graph
A {
	facets: F1, F2;
}

facet F1 {
	exports: ip;
}

facet F2 {
	extends: F5;
}
